--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,9 +6,11 @@
     "baseUrl": "./",
     "paths": {
       "@/*": ["./src/*"],
-      "@shared/*": ["./shared/*"]
+      "@shared/*": ["./shared/*"],
+      "@api/*": ["./api/*"],
+      "@server/*": ["./server/*"]
     }
   },
-  "include": ["src", "shared", "config", "modern.config.ts"],
+  "include": ["src", "shared", "config", "modern.config.ts", "api", "server"],
   "exclude": ["**/node_modules"]
 }
